<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignUpFragment"
    android:orientation="vertical"
    android:gravity="center">
    <EditText
        android:id="@+id/email_address_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/emailAddresHint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/loginPasswordRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/repeatPasswordHint"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageButton
            android:id="@+id/google_bnt_sing_up"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/google_icon"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>
</LinearLayout>